# clyde-desktop

./: .gitignore  IMPROVEMENTS.md  README.md  SKILLS.md  clydesk.desktop  pyproject.toml  run.sh
.github/workflows/: ci.yml
clydesk/: agent.py  comfy.py  config.py  db.py  events.py  main.py  ollama.py  rag.py  router.py  sanitize.py  skills.py  ui_page.py  voice.py
skills/: calculator.py  datetime_now.py  fetch_page.py  knowledge.py  lean_check.py  memory_save.py  units.py  web_search.py
tests/: test_clydesk.py
